[package]
name = "windowless_sleep"
version = "0.1.1"
edition = "2021"
authors = ["Paul Miller <paul@mutinywallet.com>"]
description = "A sleep function for wasm that doesn't rely on window"
license = "MIT"
repository = "https://github.com/futurepaul/windowless_sleep/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = { version = "0.4.33" }
js-sys = { version = "0.3.60" }
